# RAG-Notes

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  playwright_twitter.py  privacy_policy.txt  pyproject.toml  ruff.toml  tos.txt  twitter_extractor.py
.github/workflows/: cd.yml  ci.yml
scripts/: init_dbs.py  init_dirs.py  init_playwright.py
src/: bot.py  twitter_extractor.py
src/rag_notes/: __init__.py  bot.py  twitter_extractor.py
tests/: conftest.py  test_twitter_extractor.py
